# lab_live

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: lab_live.ex  labex.ex
lib/lab_live/: application.ex  connection.ex  connection_manager.ex  csv_writer.ex  data.ex  data_info.ex  data_manager.ex  data_writer.ex  diagram.ex  execution.ex  format.ex  gettable.ex  getter.ex  instrument.ex  instrument_manager.ex  instruments.ex  loop_worker.ex  model.ex  plot.ex  property.ex  property_manager.ex  queue.ex  settable.ex  setter.ex  stats.ex  storage.ex  storage_manager.ex  store_manager.ex  telemetry.ex  variable.ex  variable_manager.ex  variables.ex  widgets.ex
lib/labex/: application.ex  format.ex  instrument.ex  instrument_manager.ex  measurement.ex  model.ex  store.ex  store_manager.ex
python/: .gitignore  pyproject.toml
python/labex_pyvisa/: communicate.py
test/: dummy_instrument_test.exs  dummy_test.exs  format_test.exs  gettable_test.exs  getter_test.exs  instrument_manager_test.exs  instrument_test.exs  lab_live_test.exs  labex_test.exs  measurement_test.exs  model_test.exs  queue_test.exs  settable_test.exs  setter_test.exs  store_manager_test.exs  store_test.exs  tcp_instrument_test.exs  tcp_test.exs  test_helper.exs  variable_manager_test.exs  variable_test.exs
test/lab_live/: connection_manager_test.exs  connection_test.exs  csv_writer_test.exs  data_manager_test.exs  data_test.exs  format_test.exs  instrument_test.exs  instruments_test.exs  model_test.exs  property_test.exs  queue_test.exs  stats_test.exs  storage_manager_test.exs  (+2 more)
(+88 files in other folders)
