[tool.poetry]
name = "labex-pyvisa"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.13.0"
pyvisa-py = "^0.7.0"
psutil = "^5.9.6"
zeroconf = "^0.118.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
